--- a/Lab_2_AlgorithmsBasics.ipynb
+++ b/Lab_2_AlgorithmsBasics.ipynb
@@ -3,6 +3,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/241b174-dotcom/Algorithm-lab/blob/main/Lab_2_AlgorithmsBasics.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "abJu28xqAPbI"
       },
       "source": [
@@ -21,26 +31,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 87,
       "metadata": {
         "id": "3-UNTwkEAPbL"
       },
       "outputs": [],
       "source": [
         "# Exercise 1\n",
+        "import timeit\n",
         "def func1(a, b):\n",
         "  result = 0\n",
         "  for i in range(0, b):\n",
         "    result += a\n",
-        "  return result"
+        "  return result\n",
+        ""
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 89,
       "metadata": {
         "id": "MOpBD2v3APbL",
-        "outputId": "31347693-6a92-4bf9-81c9-79b7609f2be9",
+        "outputId": "162a0424-65c3-404f-9597-a418167fe641",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -50,72 +62,51 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "12\n"
+            "12\n",
+            ">> elapsed time 0.06958599988138303 ms\n"
           ]
         }
       ],
       "source": [
         "# Sample function call: func1(5, 3)\n",
         "x=print(func1(4,3))\n",
-        "#the function performs multiplication using repeated addition"
+        "#the function performs multiplication using repeated addition\n",
+        "start_time = timeit.default_timer()\n",
+        "print('>> elapsed time', (timeit.default_timer() - start_time) * 1000, 'ms')"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 90,
       "metadata": {
         "id": "sbdoDfIgAPbM",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "f42dc53c-6f27-4826-e45d-ccc82360b4be"
+        "outputId": "3405adee-bf98-465b-a253-f5f4c1c86e6c"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "16\n"
+            "16\n",
+            ">> elapsed time 0.05400300005931058 ms\n"
           ]
         }
       ],
       "source": [
         "# Exercise 2\n",
+        "import timeit\n",
         "def func2(a, b):\n",
         "  result = 1\n",
         "  while b > 0:\n",
         "    result = result * a\n",
         "    b = b - 1\n",
         "  return result\n",
-        "print(func2(2,4))"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 2,
-      "metadata": {
-        "id": "9mj7XLBNAPbN",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 159
-        },
-        "outputId": "4d0f4f53-fb00-410f-f593-852c5e46dd15"
-      },
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "name 'func2' is not defined",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m/tmp/ipython-input-2733596836.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Sample function call: func2(2, 4)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfunc2\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m: name 'func2' is not defined"
-          ]
-        }
-      ],
-      "source": [
-        "# Sample function call: func2(2, 4)\n"
+        "print(func2(2,4))\n",
+        "start_time = timeit.default_timer()\n",
+        "print('>> elapsed time', (timeit.default_timer() - start_time) * 1000, 'ms')"
       ]
     },
     {
@@ -127,6 +118,7 @@
       "outputs": [],
       "source": [
         "# Exercise 3\n",
+        "import timeit\n",
         "def func3(num):\n",
         "   result = 0\n",
         "   while num > 0:\n",
@@ -140,35 +132,39 @@
       "source": [
         "# Sample function call: func3()\n",
         "x=print(func3(547))\n",
-        "#This function prints the sum of digits of a number"
+        "#This function prints the sum of digits of a number\n",
+        "start_time = timeit.default_timer()\n",
+        "print('>> elapsed time', (timeit.default_timer() - start_time) * 1000, 'ms')"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "e5wBZtbR29qd",
-        "outputId": "559d55ae-59cc-49ef-d382-6df774de1ce6"
+        "outputId": "eeac5495-20de-422e-f863-fdb58129de01"
       },
-      "execution_count": 63,
+      "execution_count": 91,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "16\n"
+            "16\n",
+            ">> elapsed time 0.0628820002930297 ms\n"
           ]
         }
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 92,
       "metadata": {
         "id": "sokBB3_rAPbO"
       },
       "outputs": [],
       "source": [
         "# Exercise 4\n",
+        "import timeit\n",
         "def func4(a, b):\n",
         "    b.sort() # Time complexity for this function is O(Nlog N) where N = len(b)\n",
         "    intersect = 0\n",
@@ -192,27 +188,30 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 93,
       "metadata": {
         "id": "PPGhpghFAPbO",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "6816055f-af91-43a3-a42e-cbdfed5bd799"
+        "outputId": "37c4e0f1-7995-4364-a75a-07e0e09173ba"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "2\n"
+            "2\n",
+            ">> elapsed time 0.12279100019441103 ms\n"
           ]
         }
       ],
       "source": [
         "# Sample function call: func4([1, 2, 3, 4], [2, 4, 6, 8])\n",
         "print(func4([1, 2, 3, 4], [2, 4, 6, 8]))\n",
-        "#This function finds the number of common elements in both the arrays"
+        "#This function finds the number of common elements in both the arrays\n",
+        "start_time = timeit.default_timer()\n",
+        "print('>> elapsed time', (timeit.default_timer() - start_time) * 1000, 'ms')"
       ]
     },
     {
@@ -224,6 +223,7 @@
       "outputs": [],
       "source": [
         "# Exercise 5\n",
+        "import timeit\n",
         "def func5(n):\n",
         "    guess = 1\n",
         "    while guess * guess <= n:\n",
@@ -235,38 +235,42 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 94,
       "metadata": {
         "id": "dpgGUg5EAPbP",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "4d9900f8-105b-4596-e0a8-58a4f76d836f"
+        "outputId": "2939cf9f-615e-4f4c-9515-e74236c5dce4"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "4\n"
+            "4\n",
+            ">> elapsed time 0.07532699964940548 ms\n"
           ]
         }
       ],
       "source": [
         "# Sample function call: func5(16)\n",
         "print(func5(16))\n",
-        "#This function finds the square root of a number"
+        "#This function finds the square root of a number\n",
+        "start_time = timeit.default_timer()\n",
+        "print('>> elapsed time', (timeit.default_timer() - start_time) * 1000, 'ms')"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 73,
       "metadata": {
         "id": "MmO1jzALAPbP"
       },
       "outputs": [],
       "source": [
         "# Exercise 6\n",
+        "import timeit\n",
         "def func8(A):\n",
         "    func8_helper(A, 0, len(A) -1)\n",
         "\n",
@@ -287,28 +291,30 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 95,
       "metadata": {
         "id": "whCKqiZPAPbP",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e2020af7-1304-4109-d781-242dc58d22a1"
+        "outputId": "40165caa-736f-4b68-e6bc-b081cb775d0e"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "None\n"
+            "None\n",
+            ">> elapsed time 0.07134299994504545 ms\n"
           ]
         }
       ],
       "source": [
         "#Sample function call: func8([3,1,2,7,8,6])\n",
-        "x=func8([3,1,2,7,8,6])\n",
-        "print(x)\n",
-        "#This function sorts the array in ascending order"
+        "print(func8([3,1,2,7,8,6]))\n",
+        "#This function sorts the array in ascending order\n",
+        "start_time = timeit.default_timer()\n",
+        "print('>> elapsed time', (timeit.default_timer() - start_time) * 1000, 'ms')"
       ]
     },
     {
@@ -320,6 +326,7 @@
       "outputs": [],
       "source": [
         "# Exercise 7\n",
+        "import timeit\n",
         "def func12(arr, k):\n",
         "    arr_len = len(arr)\n",
         "    k = k % arr_len\n",
@@ -335,27 +342,30 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 96,
       "metadata": {
         "id": "M5dH4IJAAPbQ",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "2d004c8f-3da3-40d2-98bb-b28686299315"
+        "outputId": "39816690-0c31-46b0-ca0f-14c48c4757f0"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[4, 5, 1, 2, 3]\n"
+            "[4, 5, 1, 2, 3]\n",
+            ">> elapsed time 0.06248699992283946 ms\n"
           ]
         }
       ],
       "source": [
         "#Sample function call: func12([1, 2, 3, 4, 5], 2)\n",
         "print(func12([1, 2, 3, 4, 5], 2))\n",
-        "#This function rotates the array by k elements\n"
+        "#This function rotates the array by k elements\n",
+        "start_time = timeit.default_timer()\n",
+        "print('>> elapsed time', (timeit.default_timer() - start_time) * 1000, 'ms')\n"
       ]
     },
     {
@@ -377,6 +387,7 @@
       "outputs": [],
       "source": [
         "# write a function named as sum_arr to find sum of elements in given array\n",
+        "import timeit\n",
         "def sum_arr(arr):\n",
         "  sum = 0\n",
         "  for i in arr:\n",
@@ -387,27 +398,30 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 44,
+      "execution_count": 97,
       "metadata": {
         "id": "3BiI4_nDAPbR",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "549cb6c2-93b2-42b9-ee00-f2f91faf5949"
+        "outputId": "85b5f0d0-a01c-48d8-9fa6-482f201fab9b"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "607\n"
+            "607\n",
+            ">> elapsed time 0.05921199954173062 ms\n"
           ]
         }
       ],
       "source": [
         "#call the function\n",
         "arr = [12, 3, 4, 15,45,78,450]\n",
-        "print(sum_arr(arr))\n"
+        "print(sum_arr(arr))\n",
+        "start_time = timeit.default_timer()\n",
+        "print('>> elapsed time', (timeit.default_timer() - start_time) * 1000, 'ms')"
       ]
     },
     {
@@ -419,6 +433,7 @@
       "outputs": [],
       "source": [
         "#write a function named as max_min to find minimum (or maximum) element in an array\n",
+        "import timeit\n",
         "def max_min(arr):\n",
         "  max = arr[0]\n",
         "  min = arr[0]\n",
@@ -452,7 +467,9 @@
       "source": [
         "# call sum_arr to find sum of elements in given array for arr = [12, 1234, 45, 67, 1]\n",
         "arr = [12, 1234, 45, 67, 1]\n",
-        "print(max_min(arr))\n"
+        "print(max_min(arr))\n",
+        "start_time = timeit.default_timer()\n",
+        "print('>> elapsed time', (timeit.default_timer() - start_time) * 1000, 'ms')"
       ]
     },
     {
@@ -464,6 +481,7 @@
       "outputs": [],
       "source": [
         "# write a function named as Counting_EvenOdd to count number of even and odd elements in an array\n",
+        "import timeit\n",
         "def Counting_EvenOdd(arr):\n",
         "  count_even = 0\n",
         "  count_odd = 0\n",
@@ -500,18 +518,21 @@
       "source": [
         "# call above function for arr = [2, 3, 4, 5, 6,7,8,9,10,11,12,13]\n",
         "arr = [2, 3, 4, 5, 6,7,8,9,10,11,12,13]\n",
-        "print(Counting_EvenOdd(arr))"
+        "print(Counting_EvenOdd(arr))\n",
+        "start_time = timeit.default_timer()\n",
+        "print('>> elapsed time', (timeit.default_timer() - start_time) * 1000, 'ms')"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 54,
+      "execution_count": 98,
       "metadata": {
         "id": "1Nmqi_2sAPbX"
       },
       "outputs": [],
       "source": [
         "# write a function named as linear_Search to perform a linear search in 1D-array\n",
+        "import timeit\n",
         "def linear_Search(arr, target):\n",
         "  for i in range(len(arr)):\n",
         "    if arr[i] == target:\n",
@@ -521,38 +542,42 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 55,
+      "execution_count": 99,
       "metadata": {
         "id": "TI-ymIwGAPbY",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "f1c6fef5-2358-428a-c917-f276d5009f8e"
+        "outputId": "12ebe21b-7584-47c7-b6ab-dcaf96938a0a"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "2\n"
+            "2\n",
+            ">> elapsed time 0.0602569998591207 ms\n"
           ]
         }
       ],
       "source": [
         "# call the function liner_Search for array = [1, 3, 5, 7, 9]\n",
         "arr = [1, 3, 5, 7, 9]\n",
-        "print(linear_Search(arr, 5))\n"
+        "print(linear_Search(arr, 5))\n",
+        "start_time = timeit.default_timer()\n",
+        "print('>> elapsed time', (timeit.default_timer() - start_time) * 1000, 'ms')"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 56,
+      "execution_count": 100,
       "metadata": {
         "id": "xs4yJ8e7APbY"
       },
       "outputs": [],
       "source": [
         "# write a function named as Binary_Search to perform binary search in 1D-array\n",
+        "import timeit\n",
         "def Binary_Search(arr, target):\n",
         "  low = 0\n",
         "  high = len(arr) - 1\n",
@@ -568,32 +593,30 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 64,
+      "execution_count": 101,
       "metadata": {
         "id": "t9LXblIxAPbY",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 176
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "26f340e3-e887-48fe-c719-064c9eeb93d2"
+        "outputId": "fd2d3a55-2de9-41c8-af49-ca985456002e"
       },
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "name 'Binary_Search' is not defined",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m/tmp/ipython-input-2871781607.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# call the function Binary_Search for array arr = [1, 3, 5, 7, 9,15,16,14,45]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0marr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m5\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m7\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m9\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m15\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m16\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m14\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m45\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mBinary_Search\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0marr\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m15\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m: name 'Binary_Search' is not defined"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "5\n",
+            ">> elapsed time 0.08787299975665519 ms\n"
           ]
         }
       ],
       "source": [
         "# call the function Binary_Search for array arr = [1, 3, 5, 7, 9,15,16,14,45]\n",
         "arr = [1, 3, 5, 7, 9,15,16,14,45]\n",
-        "print(Binary_Search(arr, 15))\n"
+        "print(Binary_Search(arr, 15))\n",
+        "start_time = timeit.default_timer()\n",
+        "print('>> elapsed time', (timeit.default_timer() - start_time) * 1000, 'ms')"
       ]
     }
   ],
@@ -645,7 +668,8 @@
       "window_display": false
     },
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     }
   },
   "nbformat": 4,
